@@ -1,5 +1,16 @@
 2018-02-07  Ms2ger  <Ms2ger@igalia.com>
 
+        [GTK] Enable WebKit.GeolocationTransitionTo{High,Low}Accuracy tests
+        https://bugs.webkit.org/show_bug.cgi?id=125068
+
+        Unreviewed test gardening.
+
+        They do not appear to have failed since we started running them again in r226944.
+
+        * TestWebKitAPI/glib/TestExpectations.json:
+
+2018-02-07  Ms2ger  <Ms2ger@igalia.com>
+
         [GTK] Enable WebKit.InjectedBundleFrameHitTest test
         https://bugs.webkit.org/show_bug.cgi?id=120303
 
